Fixed logo image issues

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
 </head>
 <body>
     <div class="nav pull-right">
-      <img id="logo" src="/assets/logoCrop.jpg">
+      <!-- <img id="logo" src="/assets/logoCrop.jpg"> -->
+      <%= image_tag "logoCrop.jpg", id: "logo"%>
 
       <!-- this could be alternative logic for user login -->
 
