Updated styling for edits and shows

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <div class="login">
   <div class="container">
     <div class="form">
-
+    <div class="sectionShow"></div>
     <h1>Sign up</h1>
 
     <%= form_for :user, url: '/users' do |f| %>
