--- a/app/views/startups/index.html.erb
+++ b/app/views/startups/index.html.erb
@@ -24,7 +24,7 @@
     <div class="app">
       <%= image_tag startup.url %>
       <p><%= startup.name %></p>
-      <p>$<%= startup.price %></p>
+      <p>$<%= startup.formatted_price %></p>
       <p><%= link_to 'Show Me More', startup %></p>
       <p><%= link_to 'Edit', edit_startup_path(startup) if current_user && current_user == startup.user %>
       <%= link_to 'Destroy', startup, method: :delete, data: { confirm: 'Are you sure?' } if current_user && current_user == startup.user %></p>
@@ -33,5 +33,3 @@
 </div>
 
 <p id="footer">VJA Associates<br>A WebApp by Volney, Jon, and Angelica</p>
-
-
