--- a/app/views/startups/show.html.erb
+++ b/app/views/startups/show.html.erb
@@ -17,7 +17,7 @@
 
 <p>
   <strong>Price:</strong>
-  $<%= @startup.price %>
+  $<%= @startup.formatted_price %>
 </p>
 </div>
 <div id="reviewarea">
