Fixed new startup styling. Made logo a home button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>FailQuietly</title>
+  <div id="home"></div>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
@@ -11,7 +12,7 @@
 <body>
     <div class="nav pull-right">
       <!-- <img id="logo" src="/assets/logoCrop.jpg"> -->
-      <%= image_tag "logoCrop.jpg", id: "logo"%>
+      <a href="\startups\#home"><%= image_tag "logoCrop.jpg", id: "logo"%></a>
 
       <!-- this could be alternative logic for user login -->
 
