--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 <body>
     <div class="nav pull-right">
       <!-- <img id="logo" src="/assets/logoCrop.jpg"> -->
-      <a href="\startups\#home"><%= image_tag "logoCrop.jpg", id: "logo"%></a>
+      <a href="\"><%= image_tag "logoCrop.jpg", id: "logo"%></a>
 
       <!-- this could be alternative logic for user login -->
 
