--- a/app/views/startups/show.html.erb
+++ b/app/views/startups/show.html.erb
@@ -10,7 +10,7 @@
   <%= @startup.name %>
 </h1>
 
-<h2>
+<h2 id="description">
   <!-- <strong>Description:</strong> -->
   <%= @startup.description %>
 </h2>
