--- a/app/assets/stylesheets/startups.css
+++ b/app/assets/stylesheets/startups.css
@@ -2,6 +2,24 @@
   Place all the styles related to the matching controller here.
   They will automatically be included in application.css.
 */
+
+.field input[type=text], .field textarea, .field input[type=number]{
+  width: 60vw;
+}
+
+.field{
+  padding-left: 20vw;
+  text-align: left;
+}
+
+h2#description{
+  line-height: normal;
+}
+
+.field textarea{
+    height: 10vh;
+}
+
 .showSection{
   padding-top: 15vh;
 }
