--- a/app/views/startups/index.html.erb
+++ b/app/views/startups/index.html.erb
@@ -18,6 +18,15 @@
 
 <div id="content">
   <h1> Best of the Worst</h1>
+  <div>
+  <%= form_tag(startups_path, :method => "get", id: "search-form") do %>
+  <%= text_field_tag :search, params[:search], placeholder: "Search Startups" %>
+  <%= submit_tag "Search" %>
+  <% end %>
+  <% if @startups.empty? %>
+    <p>There are no startups containing the term(s) <%= params[:search] %>.</p>
+  <% end %>
+</div>
   <div id="new"><%= link_to 'Submit a Startup', new_startup_path %></div>
   <% @startups.each do |startup| %>
     <div class="app">
