--- a/app/assets/stylesheets/startups.css
+++ b/app/assets/stylesheets/startups.css
@@ -57,9 +57,10 @@ p{
   background-color: lightgray;
   text-align: center;
   float: left;
-  margin-left: 5vmin;
-  border: 1px solid black;
+  margin-left: 6vmin;
+  /*border: 1px solid black;*/
   border-radius: 5px;
+  box-shadow: 0px 6px 4px -4px;
 }
 
 .app img{
