--- a/app/views/startups/index.html.erb
+++ b/app/views/startups/index.html.erb
@@ -2,7 +2,7 @@
 <div id="heading">
   <% if current_user %>
     <!-- <ul> -->
-    <p id="login"><%= current_user.email %>  |  <%= link_to "Log out", logout_path, method: "delete" %></p>
+    <p id="login">Welcome, <%= current_user.name %>  |  <%= link_to "Log out", logout_path, method: "delete" %></p>
   <!-- </ul> -->
 <% else %>
   <ul>
