--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="icon" type="image/jpg" href="http://i.imgur.com/2LE2cw0.jpg">
   <title>FailQuietly</title>
   <div id="home"></div>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
